# python-container

./: .dockerignore  .env.example  .gitignore  Dockerfile  README copy.md  README.md  db.sqlite3  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  input.css  package.json  post-build.sh  pyproject.toml  requirements.txt
.agents/skills/frontend-design/: SKILL.md
.ebextensions/: django.config
.tmp/: .dockerignore  Dockerfile  docker-compose.yml
core/: settings.py  urls.py
studentplatform/: admin.py  api_urls.py  api_views.py  apps.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
studentplatform/migrations/: 0001_initial.py
studentplatform/static/css/: style.css
studentplatform/templates/: about.html  add_student.html  base.html  course_detail.html  course_list.html  edit_student.html  home.html  student_detail.html  student_list.html
studentplatform/templates/account/: login.html  password_change.html  signup.html
